src/test/deca/context/invalid/homemade/tests/test23_nom_deja_pris/test23_nom_deja_pris1.deca
// test invalide de la règle 2.3

class A {
    int val;
    int val(){}
}